--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
   "homepage": "http://www.sematext.com",
   "dependencies": {
     "measured": "^1.1.0",
-    "node-df": "^0.1.1",
-    "procfs-stats": "1.0.1",
     "request": "^2.72.0",
     "spm-agent": "^1.29.10",
+    "spm-agent-os": "^1.30.0",
     "which": "^1.2.8",
     "zip-zip-top": "^0.2.0"
   }
