add standard-format scripts/devDependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sematext-agent-nginx",
-  "version": "1.30.2",
+  "version": "1.30.3",
   "description": "SPM Agent for monitoring Nginx",
   "main": "lib/index.js",
   "bin": {
@@ -8,6 +8,10 @@
     "sematext-agent-nginx": "lib/index.js",
     "sematext-nginx-setup": "bin/sematext-nginx-setup",
     "spm-nginx-diagnostics": "./bin/spm-nginx-diagnostics.js"
+  },
+  "scripts": {
+    "standard": "standard 'lib/*.js'",
+    "standard-format": "standard-format -w lib/*.js"
   },
   "repository": {
     "type": "git",
@@ -39,13 +43,16 @@
   },
   "homepage": "http://www.sematext.com",
   "dependencies": {
-    "docker-events": "0.0.2",
-    "dockerode": "^2.2.10",
+    "docker-allcontainers": "^0.5.0",
     "measured": "^1.1.0",
     "request": "^2.72.0",
     "spm-agent": "^1.29.10",
     "spm-agent-os": "^1.30.0",
     "which": "^1.2.8",
     "zip-zip-top": "^0.2.0"
+  },
+  "devDependencies": {
+    "standard": "^7.1.2",
+    "standard-format": "^2.2.2"
   }
 }
