add docker build commands to npm run scripts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "standard": "standard 'lib/*.js'",
     "standard-format": "standard-format -w lib/*.js",
-    "docker-build" :"docker build -t sematext/sematext-agent-nginx ."
+    "docker-build" :"docker build -t sematext/sematext-agent-nginx .",
+    "docker-push": "docker push sematext/sematext-agent-nginx"
   },
   "repository": {
     "type": "git",
