--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "homepage": "http://www.sematext.com",
   "dependencies": {
+    "alasql": "^0.3.4",
     "docker-allcontainers": "^0.5.0",
     "measured": "^1.1.0",
     "request": "^2.72.0",
